cmake_minimum_required(VERSION 3.16.3)
set(CMAKE_EXPORT_COMPILE_COMMANDS True)
project(breakout VERSION 1)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED True) # 必ずC99でコンパイル
set(CMAKE_C_EXTENSIONS True) # GNU拡張を有効化
add_compile_definitions(_GNU_SOURCE)
add_executable(bk main.c)
configure_file(ball.png ball.png COPYONLY)
configure_file(bar.png bar.png COPYONLY)
configure_file(block.png block.png COPYONLY)
configure_file(NotoSansCJKjp-Regular.otf NotoSansCJKjp-Regular.otf COPYONLY)
if(EMSCRIPTEN)
	set(CMAKE_EXECUTABLE_SUFFIX ".html")
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s USE_SDL=2 -s USE_SDL_IMAGE=2 -s SDL2_IMAGE_FORMATS='[\"png\"]' -s USE_SDL_TTF=2 --preload-file ball.png --preload-file bar.png --preload-file block.png --preload-file NotoSansCJKjp-Regular.otf")
else()
	find_package(SDL2)
	include(FindPkgConfig)
	pkg_search_module(SDL2IMAGE REQUIRED SDL2_image)
	pkg_search_module(SDL2TTF REQUIRED SDL2_ttf)
	target_include_directories(bk PRIVATE ${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS} ${SDL2TTF_INCLUDE_DIRS})
	target_link_libraries(bk ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2TTF_LIBRARIES} m)
endif()
